# solona_copy_trade

./: .env  .gitignore  .slugignore  Cargo.toml  Procfile  README.md  railway.json
src/: main.rs  swapper.rs
