[package]
name = "solona_copy_trade"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = [
    "json",
    "native-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
axum = "0.7" # A modern web framework
tower-http = { version = "0.5", features = ["cors"] }
axum-server = "0.5"
